--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,6 +125,56 @@ services:
       retries: 3
     restart: unless-stopped
 
+  # Redis Cache Service
+  redis:
+    image: redis:7-alpine
+    container_name: sitecache-redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    restart: unless-stopped
+    command: redis-server --appendonly yes --maxmemory 1gb --maxmemory-policy allkeys-lru
+
+  # Media Preview Service
+  media-preview:
+    build:
+      context: ./media-preview-service
+      dockerfile: Dockerfile
+    container_name: sitecache-media-preview
+    # High-performance resources for video transcoding
+    mem_limit: 8g
+    cpus: 8.0
+    environment:
+      NODE_ENV: ${NODE_ENV:-production}
+      PORT: 3003
+      REDIS_URL: redis://redis:6379
+      PREVIEW_CACHE_DIR: /tmp/previews
+      TEMP_DIR: /tmp/temp
+    volumes:
+      # Mount LucidLink filesystem for file access
+      - lucidlink_mount:/media/lucidlink-1:ro
+      # Dedicated cache volume for previews
+      - preview_cache:/tmp/previews
+      # Temp directory for processing
+      - preview_temp:/tmp/temp
+    ports:
+      - "3003:3003"
+    depends_on:
+      redis:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3003/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    restart: unless-stopped
+
   # Varnish Stats Collection Service
   varnish-stats:
     build:
@@ -146,6 +196,12 @@ volumes:
   lucidlink_mount:
     driver: local
   varnish_stats:
+    driver: local
+  redis_data:
+    driver: local
+  preview_cache:
+    driver: local
+  preview_temp:
     driver: local
 
 networks:
