Fix media preview service Docker build
- Generate package-lock.json for media preview service
- Update Dockerfile to use npm install instead of npm ci
- Fix dependency installation in container build

--- a/media-preview-service/Dockerfile
+++ b/media-preview-service/Dockerfile
@@ -14,7 +14,7 @@ WORKDIR /app
 COPY package*.json ./
 
 # Install dependencies
-RUN npm ci --only=production --no-audit --no-fund
+RUN npm install --omit=dev --no-audit --no-fund
 
 # Copy application files
 COPY . .
