--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "db:reset": "psql -d sitecache_db -c 'DROP SCHEMA public CASCADE; CREATE SCHEMA public;' && npm run db:setup"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^8.11.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
