--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,6 +73,10 @@ services:
       CACHE_WORKER_COUNT: ${CACHE_WORKER_COUNT:-2}
       MAX_CONCURRENT_FILES: ${MAX_CONCURRENT_FILES:-5}
       WORKER_POLL_INTERVAL: ${WORKER_POLL_INTERVAL:-2000}
+      # Elasticsearch configuration
+      ELASTICSEARCH_HOST: ${ELASTICSEARCH_HOST:-elasticsearch}
+      ELASTICSEARCH_PORT: ${ELASTICSEARCH_PORT:-9200}
+      ELASTICSEARCH_INDEX: ${ELASTICSEARCH_INDEX:-sitecache-files}
       # Use host.docker.internal to access host machine from container
       LUCIDLINK_API_HOST: ${LUCIDLINK_API_HOST:-host.docker.internal}
     volumes:
@@ -141,6 +145,39 @@ services:
     restart: unless-stopped
     command: redis-server --appendonly yes --maxmemory 1gb --maxmemory-policy allkeys-lru
 
+  # Elasticsearch Search Service
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.11.0
+    container_name: sitecache-elasticsearch
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+      - xpack.security.enrollment.enabled=false
+      - xpack.security.http.ssl.enabled=false
+      - xpack.security.transport.ssl.enabled=false
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
+      - cluster.name=sitecache-cluster
+      - node.name=sitecache-node
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    mem_limit: 2g
+    cpus: 2.0
+    volumes:
+      - elasticsearch_data:/usr/share/elasticsearch/data
+    ports:
+      - "9200:9200"
+      - "9300:9300"
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:9200/_cluster/health || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 60s
+    restart: unless-stopped
+
   # Media Preview Service
   media-preview:
     build:
@@ -198,6 +235,8 @@ volumes:
   varnish_stats:
     driver: local
   redis_data:
+    driver: local
+  elasticsearch_data:
     driver: local
   preview_cache:
     driver: local
