Fix media preview functionality and add hls.js support
- Add FFmpeg to backend Dockerfile for video transcoding
- Fix frontend null-safety issues with optional chaining
- Add hls.js support for Chromium HLS video playback
- Remove progressive streaming overlay message
- Integrate MediaPreviewService with Redis caching
- Support both direct MP4 streaming and HLS transcoding

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,6 +8,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     fuse \
     ca-certificates \
     curl \
+    ffmpeg \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy and install custom LucidLink build
