--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "node-fetch": "^2.7.0",
     "pg": "^8.11.3",
+    "redis": "^4.6.10",
     "uuid": "^9.0.1",
     "ws": "^8.14.2"
   },
