Restore Elasticsearch search functionality with v1.4.0 features
- Add Elasticsearch client integration to backend server
- Implement /search/elasticsearch and /search/elasticsearch/availability endpoints
- Update frontend to detect and use Elasticsearch when available
- Add dual-mode search: enhanced ES search with PostgreSQL fallback
- Update version display to 1.4.0 throughout application
- Remove unused media-preview service from docker-compose
- Update nginx configuration for Chrome compatibility
- Remove "Show Cached" button as requested
- Add search error handling and improved UX
- Support advanced search operators (AND, OR, NOT, wildcards)

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,7 @@ coverage/
 CLAUDE.md
 CLAUDE.local.md
 .claude/backend/lucidlink_3.2.6817_amd64.deb
+
+# LucidLink installer (large binary file)
+backend/lucidlink_3.2.6817_amd64.deb
+lucidlink_3.2.6817_amd64.deb
