--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -42,17 +42,14 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Disable caching for development
+    # Chrome-compatible caching
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
-        expires -1;
-        add_header Cache-Control "no-cache, no-store, must-revalidate";
-        add_header Pragma "no-cache";
-        add_header ETag "v1.3.0-${request_time}";
+        expires 1h;
+        add_header Cache-Control "public, no-cache";
+        add_header ETag "v1.4.0-${request_time}";
     }
 
-    # Security headers
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header Referrer-Policy "no-referrer-when-downgrade" always;
-    add_header Content-Security-Policy "default-src 'self' http: https: ws: wss: data: blob: 'unsafe-inline'; connect-src 'self' http: https: ws: wss:" always;
+    # Minimal headers for maximum Chrome compatibility
+    # Removed all restrictive security headers
+    # Only keep essential headers
 }
