--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
 # SiteCache Browser Environment Configuration Template
 # Copy this file to .env and update with your values
+#
+# Quick start:
+# cp .env.example .env
+# 
+# Then update the authentication and LucidLink credentials below
 
 # Database Configuration
 POSTGRES_PASSWORD=changeme_strong_password_here
@@ -26,6 +31,12 @@ LUCIDLINK_MOUNT_POINT=/media/lucidlink-1
 
 # Note: LucidLink API port is automatically discovered at runtime via `lucid list`
 
+# Authentication Configuration
+JWT_SECRET=your-super-secret-jwt-key-change-in-production
+JWT_EXPIRY=8h
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=admin123
+
 # Performance Configuration
 CACHE_WORKER_COUNT=2
 MAX_CONCURRENT_FILES=5
@@ -49,6 +60,11 @@ LOG_DIR=/app/logs
 LOG_CONSOLE=true
 LOG_FILE=true
 LOG_ROTATION=true
+
+# Elasticsearch Configuration
+ELASTICSEARCH_HOST=elasticsearch
+ELASTICSEARCH_PORT=9200
+ELASTICSEARCH_INDEX=sitecache-files
 
 # Frontend Configuration
 # For Docker development, use your Docker host IP (find with: docker network inspect bridge | grep Gateway)
