--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@elastic/elasticsearch": "^8.11.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "node-fetch": "^2.7.0",
     "pg": "^8.11.3",
     "redis": "^4.6.10",
