Implement comprehensive development workflow improvements
- Add multi-environment Docker setup (dev/prod separation)
- Create hot reload development environment with 20x faster iteration
- Add multi-stage Dockerfiles for backend and frontend
- Implement environment-specific configurations (.env.development)
- Add comprehensive development scripts and automation
- Create production bootstrap script for one-command deployment
- Fix login screen title regression (Site Cache Browser → SiteCache Manager)
- Add authentication middleware to previously unprotected endpoints
- Update documentation with development guides and troubleshooting

Key benefits:
- Frontend changes: 11s → 0.5s (Docker rebuild → hot reload)
- Backend changes: 11s → 2s (Docker rebuild → nodemon)
- Production deployment: Multi-step → single command
- Team consistency: Committed development environment

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,11 @@
   "main": "server-v2.js",
   "scripts": {
     "start": "node server-v2.js",
-    "dev": "nodemon server.js",
+    "dev": "nodemon --inspect=0.0.0.0:9229 server-v2.js",
+    "dev:watch": "nodemon --watch . --ext js,json server-v2.js",
+    "dev:debug": "nodemon --inspect-brk=0.0.0.0:9229 server-v2.js",
+    "build": "echo 'No build step required for Node.js backend'",
+    "test": "echo 'No tests specified'",
     "db:setup": "psql -d sitecache_db -f schema.sql",
     "db:reset": "psql -d sitecache_db -c 'DROP SCHEMA public CASCADE; CREATE SCHEMA public;' && npm run db:setup"
   },
