--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,39 @@
-# Frontend Dockerfile - Multi-stage build
+# Multi-stage Dockerfile for Frontend
+# Development stage
+FROM node:18-alpine AS development
+
+# Set working directory
+WORKDIR /app
+
+# Install dependencies for development
+RUN apk add --no-cache \
+    git \
+    python3 \
+    make \
+    g++
+
+# Copy package files
+COPY package*.json ./
+
+# Install all dependencies (including dev dependencies)
+RUN npm ci
+
+# Copy source code (for development, this will be overridden by volume mount)
+COPY . .
+
+# Set development environment variables
+ENV NODE_ENV=development
+ENV CHOKIDAR_USEPOLLING=true
+ENV FAST_REFRESH=true
+ENV GENERATE_SOURCEMAP=true
+
+# Expose port for React dev server
+EXPOSE 3000
+
+# Start React development server
+CMD ["npm", "start"]
+
+# Builder stage for production
 FROM node:18-alpine AS builder
 
 # Set working directory
@@ -7,10 +42,14 @@ WORKDIR /app
 # Accept build arguments 
 ARG REACT_APP_API_URL
 ARG REACT_APP_WS_URL
+ARG REACT_APP_LUCIDLINK_MOUNT_POINT
 
-# Set environment variables for build - use correct syntax
+# Set environment variables for build
 ENV REACT_APP_API_URL=$REACT_APP_API_URL
 ENV REACT_APP_WS_URL=$REACT_APP_WS_URL
+ENV REACT_APP_LUCIDLINK_MOUNT_POINT=$REACT_APP_LUCIDLINK_MOUNT_POINT
+ENV NODE_ENV=production
+ENV GENERATE_SOURCEMAP=false
 
 # Copy package files
 COPY package*.json ./
@@ -25,7 +64,10 @@ COPY . .
 RUN npm run build
 
 # Production stage
-FROM nginx:alpine
+FROM nginx:alpine AS production
+
+# Install curl for health checks
+RUN apk add --no-cache curl
 
 # Copy built application from builder stage
 COPY --from=builder /app/build /usr/share/nginx/html
@@ -33,12 +75,15 @@ COPY --from=builder /app/build /usr/share/nginx/html
 # Copy custom nginx configuration
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
+# Create nginx user and set permissions
+RUN chown -R nginx:nginx /usr/share/nginx/html
+
 # Expose port
 EXPOSE 80
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-  CMD wget --no-verbose --tries=1 --spider http://localhost/ || exit 1
+  CMD curl -f http://localhost/ || exit 1
 
 # Start nginx
 CMD ["nginx", "-g", "daemon off;"]
