--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ yarn-error.log*
 .env.test.local
 .env.production.local
 
+# Allow committed development environment file
+!.env.development
+
 # Production build
 build/
 dist/
