--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/your-org/sitecache-manager.git"
+    "url": "git+https://github.com/dmcp718/sc-manager.git"
   },
   "keywords": [
     "file-management",
