--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   # PostgreSQL Database
   postgres:
     image: postgres:15-alpine
-    container_name: sitecache-postgres
+    container_name: sc-mgr-postgres
     environment:
       POSTGRES_DB: ${DB_NAME:-sitecache_db}
       POSTGRES_USER: ${DB_USER:-sitecache_user}
@@ -38,7 +38,7 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    container_name: sitecache-backend
+    container_name: sc-mgr-backend
     # Performance optimizations
     mem_limit: 4g
     cpus: 4.0
@@ -123,7 +123,7 @@ services:
         REACT_APP_API_URL: ${REACT_APP_API_URL:-http://192.168.8.28:3001/api}
         REACT_APP_WS_URL: ${REACT_APP_WS_URL:-ws://192.168.8.28:3002}
         REACT_APP_LUCIDLINK_MOUNT_POINT: ${LUCIDLINK_MOUNT_POINT:-/media/lucidlink-1}
-    container_name: sitecache-frontend
+    container_name: sc-mgr-frontend
     ports:
       - "8080:80"
     depends_on:
@@ -138,7 +138,7 @@ services:
   # Redis Cache Service
   redis:
     image: redis:7-alpine
-    container_name: sitecache-redis
+    container_name: sc-mgr-redis
     ports:
       - "6379:6379"
     volumes:
@@ -154,7 +154,7 @@ services:
   # Elasticsearch Search Service
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.11.0
-    container_name: sitecache-elasticsearch
+    container_name: sc-mgr-elasticsearch
     environment:
       - discovery.type=single-node
       - xpack.security.enabled=false
@@ -190,7 +190,7 @@ services:
     build:
       context: ./varnish-stats-collector
       dockerfile: Dockerfile
-    container_name: sitecache-varnish-stats
+    container_name: sc-mgr-varnish-stats
     environment:
       VARNISH_STATS_INTERVAL: ${VARNISH_STATS_INTERVAL:-60000}
       VARNISH_CONTAINER_NAME: ${VARNISH_CONTAINER_NAME:-sitecache-varnish-1}
@@ -214,4 +214,4 @@ volumes:
 
 networks:
   default:
-    name: sitecache-network
+    name: sc-mgr-network
