Fix frontend runtime errors and improve development environment
- Fix jobs.some() runtime error by ensuring jobs is always an array when API calls fail
- Fix filesystem tree navigation by improving error handling in loadRoots()
- Update development environment to use host filesystem mount for LucidLink
- Fix environment variable propagation in docker-compose.dev.yml for proper LUCIDLINK_FILESPACE display
- Configure remote access with server IP for cross-network development
- Ensure authentication-dependent API calls only run when user is authenticated

--- a/.env.development
+++ b/.env.development
@@ -16,11 +16,12 @@ ALLOWED_PATHS=/media/lucidlink-1
 LUCIDLINK_MOUNT_POINT=/media/lucidlink-1
 LUCIDLINK_COMMAND=/usr/local/bin/lucid
 LUCIDLINK_FS_1_PORT=7778
+LUCIDLINK_FILESPACE=production.dmpfs
 ENABLE_LUCIDLINK_STATS=true
 LUCIDLINK_API_HOST=host.docker.internal
 
-# Development-specific settings
-LUCIDLINK_FILESPACE=
+# Development: Use empty values so container doesn't try to mount LucidLink
+# LUCIDLINK_FILESPACE=
 LUCIDLINK_USER=
 LUCIDLINK_PASSWORD=
 
@@ -46,8 +47,9 @@ ADMIN_USERNAME=admin
 ADMIN_PASSWORD=admin123
 
 # Frontend Configuration (development)
-REACT_APP_API_URL=http://localhost:3001/api
-REACT_APP_WS_URL=ws://localhost:3002
+# Set these to your server IP when accessing from remote machines
+REACT_APP_API_URL=http://192.168.8.28:3001/api
+REACT_APP_WS_URL=ws://192.168.8.28:3002
 REACT_APP_LUCIDLINK_MOUNT_POINT=/media/lucidlink-1
 
 # Varnish Stats
