Fix media preview authentication for development and production
- Add query parameter token support to auth middleware for HLS video requests
- Update frontend to include auth tokens in all video URLs (direct streaming and HLS)
- Configure HLS.js to send auth tokens for playlist and segment requests
- Set development containers to run as root for better file system access
- Enable MP4 direct streaming and ProRes transcoding authentication

Media preview now works for both web-compatible (MP4) and non-web formats (ProRes)

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,6 +9,7 @@ services:
       dockerfile: Dockerfile
       target: development  # We'll add this target to Dockerfile
     container_name: sc-mgr-backend-dev
+    user: root
     volumes:
       # Mount source code for live reload
       - ./backend:/app
@@ -64,6 +65,7 @@ services:
       dockerfile: Dockerfile
       target: development  # We'll add this target to Dockerfile
     container_name: sc-mgr-frontend-dev
+    user: root
     volumes:
       # Mount source code for live reload
       - ./frontend/src:/app/src
