Add Grafana dashboard button to header bar
- Added Grafana icon button between cache usage display and Index Files button
- Button opens Grafana dashboard in new tab using REACT_APP_GRAFANA_URL
- Added REACT_APP_GRAFANA_URL environment variable to .env.development
- Included Grafana SVG icon in frontend public directory
- Fixed image preview authentication by adding auth tokens to image URLs

--- a/.env.development
+++ b/.env.development
@@ -51,6 +51,7 @@ ADMIN_PASSWORD=admin123
 REACT_APP_API_URL=http://192.168.8.28:3001/api
 REACT_APP_WS_URL=ws://192.168.8.28:3002
 REACT_APP_LUCIDLINK_MOUNT_POINT=/media/lucidlink-1
+REACT_APP_GRAFANA_URL=http://192.168.8.28:3000
 
 # Varnish Stats
 VARNISH_STATS_INTERVAL=60000
