Implement Elasticsearch stale data cleanup and search result verification
- Add ES bulk delete capabilities for stale entry cleanup
- Enhance indexer with automatic ES-PostgreSQL synchronization during deletion detection
- Add manual cleanup endpoint for orphaned ES documents with safety checks
- Implement real-time search result verification with filesystem existence checks
- Add automatic stale entry detection and async cleanup during search operations
- Update search endpoints to return verification metadata and only verified results
- Add ELASTICSEARCH_SYNC_DELETIONS environment variable for configuration
- Ensure PostgreSQL indexing reliability matches filesystem sidebar accuracy

This provides sidebar-level accuracy for search results while maintaining performance,
with automatic self-healing cleanup of stale data from both PostgreSQL and Elasticsearch.

--- a/.env.development
+++ b/.env.development
@@ -39,6 +39,7 @@ UV_THREADPOOL_SIZE=8
 ELASTICSEARCH_HOST=elasticsearch
 ELASTICSEARCH_PORT=9200
 ELASTICSEARCH_INDEX=sitecache-files-dev
+ELASTICSEARCH_SYNC_DELETIONS=true
 
 # Authentication (development - insecure but convenient)
 JWT_SECRET=dev-secret-key-change-in-production
