--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@elastic/elasticsearch": "^8.11.0",
+    "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
