--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,6 +10,7 @@ services:
       target: development  # We'll add this target to Dockerfile
     container_name: sc-mgr-backend-dev
     user: root
+    network_mode: host  # Use host networking to access LucidLink API
     volumes:
       # Mount source code for live reload
       - ./backend:/app
@@ -20,7 +21,7 @@ services:
     environment:
       NODE_ENV: development
       PORT: 3001
-      DB_HOST: postgres
+      DB_HOST: localhost  # Use localhost with host networking
       DB_PORT: 5432
       DB_NAME: sitecache_db
       DB_USER: sitecache_user
@@ -41,7 +42,7 @@ services:
       CACHE_WORKER_COUNT: 2
       MAX_CONCURRENT_FILES: 5
       WORKER_POLL_INTERVAL: 2000
-      ELASTICSEARCH_HOST: elasticsearch
+      ELASTICSEARCH_HOST: localhost  # Use localhost with host networking
       ELASTICSEARCH_PORT: 9200
       ELASTICSEARCH_INDEX: sitecache-files
       JWT_SECRET: dev-secret-key-change-in-production
@@ -49,11 +50,15 @@ services:
       ADMIN_USERNAME: admin
       ADMIN_PASSWORD: admin123
       LUCIDLINK_API_HOST: host.docker.internal
+      # RUI Configuration
+      ENABLE_RUI: "true"
+      RUI_SCAN_INTERVAL: 30000
+      RUI_MONITOR_INTERVAL: 2000
+      RUI_BATCH_SIZE: 100
+      RUI_MAX_CONCURRENT_MONITORS: 10
+      LUCIDLINK_API_PORT: 9780
     command: npm run dev  # We'll add this script
-    ports:
-      - "3001:3001"
-      - "3002:3002"
-      - "9229:9229"  # Node.js debugger port
+    # Ports not needed with host networking - uses host ports directly
     depends_on:
       postgres:
         condition: service_healthy
