--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,7 @@ services:
       DB_NAME: ${DB_NAME:-sitecache_db}
       DB_USER: ${DB_USER:-sitecache_user}
       DB_PASSWORD: ${POSTGRES_PASSWORD:-sitecache_password}
+      PREVIEW_CACHE_DIR: /app/preview-cache
       INDEX_ROOT_PATH: ${INDEX_ROOT_PATH:-/media/lucidlink-1}
       ALLOWED_PATHS: ${ALLOWED_PATHS:-/media/lucidlink-1}
       NETWORK_INTERFACE: ${NETWORK_INTERFACE:-eth0}
@@ -102,6 +103,8 @@ services:
       - lucidlink_mount:/media/lucidlink-1
       # Shared volume for varnish stats
       - varnish_stats:/data
+      # Persistent preview cache
+      - ${PREVIEW_CACHE_HOST_PATH:-./data/previews}:/app/preview-cache
     ports:
       - "3001:3001"
       - "3002:3002"
