Rename project from sc-browser-v2 to sc-manager
- Update all Docker Compose references to sc-manager
- Update Dockerfile COPY paths to use sc-manager
- Update documentation paths in TESTING.md
- Add data/previews/ to .gitignore
- Align with new repository name: https://github.com/dmcp718/sc-manager.git

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,6 @@ CLAUDE.local.md
 # LucidLink installer (large binary file)
 backend/lucidlink_3.2.6817_amd64.deb
 lucidlink_3.2.6817_amd64.deb
+
+# Preview cache data
+data/previews/
