Complete .env.production with missing environment variables
- Add JWT authentication settings (JWT_SECRET, JWT_EXPIRY, ADMIN credentials)
- Add complete LucidLink configuration including credentials
- Add Elasticsearch settings for production search
- Fix REACT_APP_API_URL to include /api suffix
- Add performance tuning variables (NODE_OPTIONS, UV_THREADPOOL_SIZE)
- Remove unused NETWORK_INTERFACE variable
- Add Varnish stats configuration
- Standardize mount point to /media/lucidlink-1

--- a/.env.production
+++ b/.env.production
@@ -14,35 +14,56 @@ PORT=3001
 WEBSOCKET_PORT=3002
 
 # LucidLink Configuration
-LUCIDLINK_MOUNT=/mnt/lucidlink
-INDEX_ROOT_PATH=/mnt/lucidlink
-ALLOWED_PATHS=/mnt/lucidlink
-LUCIDLINK_FS_1=lucidlink
-LUCIDLINK_FS_1_PORT=9782
-LUCIDLINK_API_HOST=127.0.0.1  # Direct access in host network mode
+LUCIDLINK_MOUNT_POINT=/media/lucidlink-1
+INDEX_ROOT_PATH=/media/lucidlink-1
+ALLOWED_PATHS=/media/lucidlink-1
+LUCIDLINK_COMMAND=/usr/local/bin/lucid
+LUCIDLINK_FS_1_PORT=7778
+LUCIDLINK_API_HOST=127.0.0.1
+LUCIDLINK_FILESPACE=your-production-filespace.domain
+LUCIDLINK_USER=your-email@domain.com
+LUCIDLINK_PASSWORD=your-secure-password
+ENABLE_LUCIDLINK_STATS=true
 
-# Network Configuration (check with: ip addr)
-NETWORK_INTERFACE=eth0
+# Network Configuration
+ENABLE_NETWORK_STATS=false
+
+# Authentication (CRITICAL - change these!)
+JWT_SECRET=GENERATE_SECURE_JWT_SECRET_HERE
+JWT_EXPIRY=8h
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=GENERATE_STRONG_ADMIN_PASSWORD_HERE
 
 # Frontend Configuration
-REACT_APP_API_URL=https://your-domain.com
+REACT_APP_API_URL=https://your-domain.com/api
 REACT_APP_WS_URL=wss://your-domain.com
+REACT_APP_LUCIDLINK_MOUNT_POINT=/media/lucidlink-1
+REACT_APP_GRAFANA_URL=https://your-domain.com:3000
 
 # SSL Configuration
 SSL_CERT_PATH=/etc/letsencrypt/live/your-domain.com/fullchain.pem
 SSL_KEY_PATH=/etc/letsencrypt/live/your-domain.com/privkey.pem
 DOMAIN_NAME=your-domain.com
 
+# Elasticsearch Configuration
+ELASTICSEARCH_HOST=elasticsearch
+ELASTICSEARCH_PORT=9200
+ELASTICSEARCH_INDEX=sitecache-files
+ELASTICSEARCH_SYNC_DELETIONS=true
+
 # Performance Tuning
-MAX_CONCURRENT_INDEXING=5
 CACHE_WORKER_COUNT=4
-DB_POOL_SIZE=20
-DB_IDLE_TIMEOUT=10000
+MAX_CONCURRENT_FILES=5
+WORKER_POLL_INTERVAL=2000
+UV_THREADPOOL_SIZE=16
+NODE_OPTIONS=--max-old-space-size=3072
 
 # Logging
 LOG_LEVEL=info
 LOG_FORMAT=json
 LOG_DIR=/var/log/sitecache-browser
 
-# Monitoring
-# Metrics removed - this is a management tool, not a production service
+# Varnish Stats (optional)
+ENABLE_VARNISH_STATS=false
+VARNISH_STATS_INTERVAL=60000
+VARNISH_CONTAINER_NAME=sitecache-varnish-1
