Update .env.production to use IP addresses instead of FQDNs
- Change REACT_APP_API_URL and REACT_APP_WS_URL to use YOUR_SERVER_IP
- Update REACT_APP_GRAFANA_URL to use IP address format
- Update SSL paths to generic certificate locations
- Set DOMAIN_NAME to YOUR_SERVER_IP for IP-based deployments

--- a/.env.production
+++ b/.env.production
@@ -32,15 +32,15 @@ ADMIN_USERNAME=admin
 ADMIN_PASSWORD=GENERATE_STRONG_ADMIN_PASSWORD_HERE
 
 # Frontend Configuration
-REACT_APP_API_URL=https://your-domain.com/api
-REACT_APP_WS_URL=wss://your-domain.com
+REACT_APP_API_URL=https://YOUR_SERVER_IP/api
+REACT_APP_WS_URL=wss://YOUR_SERVER_IP
 REACT_APP_LUCIDLINK_MOUNT_POINT=/media/lucidlink-1
-REACT_APP_GRAFANA_URL=https://your-domain.com:3000
+REACT_APP_GRAFANA_URL=https://YOUR_SERVER_IP:3000
 
-# SSL Configuration
-SSL_CERT_PATH=/etc/letsencrypt/live/your-domain.com/fullchain.pem
-SSL_KEY_PATH=/etc/letsencrypt/live/your-domain.com/privkey.pem
-DOMAIN_NAME=your-domain.com
+# SSL Configuration (for Let's Encrypt or custom certificates)
+SSL_CERT_PATH=/etc/ssl/certs/your-cert.pem
+SSL_KEY_PATH=/etc/ssl/private/your-key.pem
+DOMAIN_NAME=YOUR_SERVER_IP
 
 # Elasticsearch Configuration
 ELASTICSEARCH_HOST=elasticsearch
