Fix varnish cache stats collection and display accurate usage
- Add Docker socket mount to varnish-stats service for proper data collection
- Fix frontend file tree loading after login with explicit data loading calls
- Add debugging console logs for authentication token handling
- Implement password reveal toggle with eye icon for login screen
- Update API URLs to use relative paths for proper HTTPS compatibility
- Add authentication test script for deployment verification

Cache stats now correctly show ~406GB used of ~752GB total (54% usage)
instead of incorrect mock data showing 99.9% usage.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -211,6 +211,7 @@ services:
       VARNISH_CONTAINER_NAME: ${VARNISH_CONTAINER_NAME:-sitecache-varnish-1}
     volumes:
       - varnish_stats:/data
+      - /var/run/docker.sock:/var/run/docker.sock
     restart: unless-stopped
 
 
