--- a/frontend/Dockerfile.caddy
+++ b/frontend/Dockerfile.caddy
@@ -1,6 +1,18 @@
 # Multi-stage Dockerfile for Frontend with Caddy
 FROM node:18-alpine AS builder
 
+# Accept build arguments (needed for production builds)
+ARG REACT_APP_API_URL
+ARG REACT_APP_WS_URL
+ARG REACT_APP_LUCIDLINK_MOUNT_POINT
+
+# Set environment variables for build
+ENV REACT_APP_API_URL=$REACT_APP_API_URL
+ENV REACT_APP_WS_URL=$REACT_APP_WS_URL
+ENV REACT_APP_LUCIDLINK_MOUNT_POINT=$REACT_APP_LUCIDLINK_MOUNT_POINT
+ENV NODE_ENV=production
+ENV GENERATE_SOURCEMAP=false
+
 WORKDIR /app
 COPY sc-manager/frontend/package*.json ./
 RUN npm ci
@@ -8,7 +20,7 @@ COPY sc-manager/frontend/ .
 RUN npm run build
 
 # Production stage with Caddy
-FROM caddy:2-alpine
+FROM caddy:2-alpine AS production
 
 # Copy built React app
 COPY --from=builder /app/build /usr/share/caddy
