Add configurable S3 proxy and improve Grafana configuration
- Add LUCID_S3_PROXY environment variable for media preview functionality
- Update Grafana URL from hardcoded dev IP to configurable environment variable
- Add REACT_APP_GRAFANA_URL support with proper Docker build arguments
- Update environment templates with new configuration options
- Ensure all deployments can customize these settings via .env files

--- a/.env.production
+++ b/.env.production
@@ -23,6 +23,7 @@ LUCIDLINK_API_HOST=127.0.0.1
 LUCIDLINK_FILESPACE=your-production-filespace.domain
 LUCIDLINK_USER=your-email@domain.com
 LUCIDLINK_PASSWORD=your-secure-password
+LUCID_S3_PROXY=http://YOUR_SERVER_IP:80
 ENABLE_LUCIDLINK_STATS=true
 
 # Authentication (CRITICAL - change these!)
