--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -43,11 +43,13 @@ WORKDIR /app
 ARG REACT_APP_API_URL
 ARG REACT_APP_WS_URL
 ARG REACT_APP_LUCIDLINK_MOUNT_POINT
+ARG REACT_APP_GRAFANA_URL
 
 # Set environment variables for build
 ENV REACT_APP_API_URL=$REACT_APP_API_URL
 ENV REACT_APP_WS_URL=$REACT_APP_WS_URL
 ENV REACT_APP_LUCIDLINK_MOUNT_POINT=$REACT_APP_LUCIDLINK_MOUNT_POINT
+ENV REACT_APP_GRAFANA_URL=$REACT_APP_GRAFANA_URL
 ENV NODE_ENV=production
 ENV GENERATE_SOURCEMAP=false
 
