Make video transcoding settings configurable via environment variables
- Add 11 new environment variables for video/audio transcoding configuration
- Replace hardcoded FFmpeg parameters with configurable values
- Add transcoding settings to .env.production template with documentation
- Update docker-compose files to pass environment variables to backend
- Maintain backward compatibility with sensible defaults
- Enable deployment-specific optimization for quality vs performance

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -98,6 +98,18 @@ services:
       RUI_FS_SCAN_INTERVAL: ${RUI_FS_SCAN_INTERVAL:-60000}
       RUI_HOT_DIR_INTERVAL: ${RUI_HOT_DIR_INTERVAL:-15000}
       RUI_MAX_CONCURRENT: ${RUI_MAX_CONCURRENT:-10}
+      # Video transcoding configuration
+      TRANSCODE_VIDEO_BITRATE: ${TRANSCODE_VIDEO_BITRATE:-2800k}
+      TRANSCODE_VIDEO_MAXRATE: ${TRANSCODE_VIDEO_MAXRATE:-3000k}
+      TRANSCODE_VIDEO_BUFSIZE: ${TRANSCODE_VIDEO_BUFSIZE:-6000k}
+      TRANSCODE_VIDEO_WIDTH: ${TRANSCODE_VIDEO_WIDTH:-1280}
+      TRANSCODE_VIDEO_HEIGHT: ${TRANSCODE_VIDEO_HEIGHT:-720}
+      TRANSCODE_AUDIO_BITRATE: ${TRANSCODE_AUDIO_BITRATE:-128k}
+      TRANSCODE_AUDIO_CODEC: ${TRANSCODE_AUDIO_CODEC:-aac}
+      TRANSCODE_AUDIO_CHANNELS: ${TRANSCODE_AUDIO_CHANNELS:-2}
+      TRANSCODE_AUDIO_SAMPLE_RATE: ${TRANSCODE_AUDIO_SAMPLE_RATE:-48000}
+      TRANSCODE_HLS_SEGMENT_TIME: ${TRANSCODE_HLS_SEGMENT_TIME:-2}
+      TRANSCODE_CONTAINER_FORMAT: ${TRANSCODE_CONTAINER_FORMAT:-hls}
     volumes:
       # Application logs
       - backend_logs:/app/logs
