SECURITY: Remove SSL certificates and hardcoded IPs from repository
- Remove SSL certificates and private keys from repository
- Replace hardcoded 192.168.8.28 IP addresses with localhost defaults
- Add SSL files to .gitignore to prevent future commits
- Update all compose files and frontend defaults for security

CRITICAL: SSL certificates and private keys were exposed in repository\!

--- a/.env.development
+++ b/.env.development
@@ -49,10 +49,10 @@ ADMIN_PASSWORD=admin123
 
 # Frontend Configuration (development)
 # Set these to your server IP when accessing from remote machines
-REACT_APP_API_URL=http://192.168.8.28:3001/api
-REACT_APP_WS_URL=ws://192.168.8.28:3002
+REACT_APP_API_URL=http://localhost:3001/api
+REACT_APP_WS_URL=ws://localhost:3002
 REACT_APP_LUCIDLINK_MOUNT_POINT=/media/lucidlink-1
-REACT_APP_GRAFANA_URL=http://192.168.8.28:3000
+REACT_APP_GRAFANA_URL=http://localhost:3000
 
 # Varnish Stats
 VARNISH_STATS_INTERVAL=60000
