--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -89,8 +89,8 @@ services:
       dockerfile: Dockerfile
       target: production
       args:
-        REACT_APP_API_URL: ${REACT_APP_API_URL:-http://192.168.8.28:3001/api}
-        REACT_APP_WS_URL: ${REACT_APP_WS_URL:-ws://192.168.8.28:3002}
+        REACT_APP_API_URL: ${REACT_APP_API_URL:-http://localhost:3001/api}
+        REACT_APP_WS_URL: ${REACT_APP_WS_URL:-ws://localhost:3002}
         REACT_APP_LUCIDLINK_MOUNT_POINT: ${LUCIDLINK_MOUNT_POINT:-/media/lucidlink-1}
     container_name: sc-mgr-frontend-prod
     ports:
